--- a/SchoolRegister.Web/Views/Student/Details.cshtml
+++ b/SchoolRegister.Web/Views/Student/Details.cshtml
@@ -47,12 +47,6 @@
             @Html.DisplayFor(model => model.RegistrationDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.GroupId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.GroupId)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.GroupName)
         </dt>
         <dd class = "col-sm-10">
@@ -61,18 +55,21 @@
             </a>
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ParentId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ParentId)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ParentName)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ParentName)
         </dd>
     </dl>
+</div>
+<div>
+    <h5>Grades:</h5>
+    <ul>
+        @foreach (var grade in Model.Grades)
+        {
+            <li>@grade.GradeValue - @grade.SubjectName</li>
+        }
+    </ul>
 </div>
 <div>
     @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
