--- a/SchoolRegister.Web/Views/Student/Index.cshtml
+++ b/SchoolRegister.Web/Views/Student/Index.cshtml
@@ -6,9 +6,6 @@
 
 <h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -36,7 +33,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.ParentName)
             </th>
-            <th></th>
+            <th>
+                @Html.DisplayNameFor(model => model.GradesCount)
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -67,9 +66,7 @@
                 @Html.DisplayFor(modelItem => item.ParentName)
             </td>
             <td>
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                @Html.DisplayFor(modelItem => item.GradesCount)
             </td>
         </tr>
 }
